Fix build workflow